@@ -24,13 +24,13 @@ import org.springframework.util.StringUtils;
 public class WebServicePublisher implements IWebServicePublisher {
 
 	private Logger logger;
-	private List<String> protocols;
-	private List<Integer> ports;
-	private List<String> paths;
-	private List<Object> implementors;
-	private IClusterManager clusterManager;
+	private transient List<String> protocols;
+	private transient List<Integer> ports;
+	private transient List<String> paths;
+	private transient List<Object> implementors;
+	private transient final IClusterManager clusterManager;
 
-	public WebServicePublisher(IClusterManager clusterManager) {
+	public WebServicePublisher(final IClusterManager clusterManager) {
 		logger = Logger.getLogger(this.getClass());
 		this.clusterManager = clusterManager;
 	}
@@ -48,7 +48,7 @@ public class WebServicePublisher implements IWebServicePublisher {
 				host = InetAddress.getLocalHost().getHostAddress();
 				URL url = new URL(protocol, host, port, path);
 				while (urlInUse(url)) {
-					port = new Integer(++port);
+					port = Integer.valueOf(++port);
 					url = new URL(protocol, host, port, path);
 				}
 				logger.info("Publishing web service to : " + url);
@@ -66,7 +66,7 @@ public class WebServicePublisher implements IWebServicePublisher {
 		clusterManager.set(Server.class, server.getId(), server);
 	}
 
-	protected boolean urlInUse(URL url) {
+	protected boolean urlInUse(final URL url) {
 		try {
 			logger.info("Checking url : " + url);
 			InputStream inputStream = url.openStream();
@@ -78,20 +78,20 @@ public class WebServicePublisher implements IWebServicePublisher {
 		}
 	}
 
-	public void setProtocols(List<String> protocols) {
+	public void setProtocols(final List<String> protocols) {
 		this.protocols = protocols;
 	}
 
-	public void setPorts(List<Integer> ports) {
+	public void setPorts(final List<Integer> ports) {
 		this.ports = ports;
 	}
 
-	public void setPaths(List<String> paths) {
+	public void setPaths(final List<String> paths) {
 		this.paths = paths;
 	}
 
 	@Override
-	public void setImplementors(List<Object> implementors) {
+	public void setImplementors(final List<Object> implementors) {
 		this.implementors = implementors;
 	}
 
